--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,8 @@
 <h3>Hello, It's Me</h3>
 <h1>Santhosh</h1>
 <h3>And I'm a <span class="typing-text">Frontend Developer</span></h3>
-<p>I'm a Frontend Developer for Fresher. </p>
+<br>
+<p>A Front-End Developer is a professional responsible for creating the visual elements of a website.</p>
       <br>expertise is to website, Frontend Angular Developer.
       <div class="home-scl">
           <a href="https://github.com/bcasanthosh"><i class='bx bxl-github'></i></a>
