--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,7 +47,7 @@
         user-friendly and visually appealing websites.
     </p>
  </div>
- <img src="../../assets/image/Front End Developer.jpg" class="aboutimg">
+ <img src="../../assets/image/Front End Developer1.png" class="aboutimg">
 </section>
 
 <section id="skills" class="skill">
