--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -150,7 +150,6 @@ span{
 .aboutimg{
     width: 350px;
     margin-left: 20px;
-    border: 5px solid black;
 }
 .skill{
     position: relative;
@@ -184,6 +183,8 @@ span{
 .html{
     width: 100px;
     margin: 40px;
+    border:2px solid #0ef;
+    box-shadow: 0 0 20px #0ef;
 }
 .css{
     border-radius: 100px;
