--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,4 +1,6 @@
-
+@media (min-width :992px) {}
+@media(min-width: 768px) and (min-width :992px){}
+@media(min-width: 767px){}
 *{
     margin: 0px;
     padding: 0px;
