--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 @media (min-width :992px) {}
 @media(min-width: 768px) and (min-width :992px){}
-@media(min-width: 767px){}
+@media(min-width: 320px){}
 *{
     margin: 0px;
     padding: 0px;
@@ -10,14 +10,14 @@
    
 }
 body{
-    color: #f7f5f5;
+    color: #1f242d;
 }
 .header 
 {
    position: fixed;
    top: 0px;
-   padding: 20px 8.5% ;
-//    background: #123e5a;
+   padding: 20px 20px;
+   width:98.5%;
    display: flex;
    justify-content: space-between;
    align-items: center;
