--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -14,7 +14,7 @@
             <a href="https://www.instagram.com/dream_boy_tn_24/"><i class='bx bxl-instagram'></i></a>
             <a href="mailto:santhoshbca9384@gmail.com"><i class='bx bx-envelope'></i></a>
         </div>
-        <a href="../../assets/image/Rusume.pdf.pdf" class="btn-box">Download CV</a>
+        <a href="../../assets/image/My Rusume.pdf.pdf" class="btn-box">Download CV</a>
     </div>
 </section>
 
