--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -1,20 +1,20 @@
 
 <section id="Home" class="home">
-    <img src="../../assets/image/Untitled design.png" class="profile">
+    <img src="../../assets/image/1706008802902.jpg" class="profile">
     <div class="home-content">
         <h3>Hello, It's Me</h3>
         <h1>Santhosh</h1>
         <h3>And I'm a <span class="typing-text">Frontend Developer</span></h3>
         <br>
         <p>A Front-End Developer is a professional responsible for creating the visual elements of a website.</p>
-        <br>expertise is to website, Frontend Angular Developer.
+        <br><p>expertise is to website, Frontend Angular Developer.</p> 
         <div class="home-scl">
             <a href="https://github.com/bcasanthosh"><i class='bx bxl-github'></i></a>
             <a href="https://www.facebook.com/profile.php?id=100042639422675"><i class='bx bxl-facebook-circle'></i></a>
             <a href="https://www.instagram.com/dream_boy_tn_24/"><i class='bx bxl-instagram'></i></a>
             <a href="mailto:santhoshbca9384@gmail.com"><i class='bx bx-envelope'></i></a>
         </div>
-        <a href="../../assets/image/My Rusume.pdf.pdf" class="btn-box">Download CV</a>
+        <div class="resume"><a href="../../assets/image/santhosh_FRONTEND.pdf" class="btn-box">Download CV</a></div>
     </div>
 </section>
 
