--- a/src/app/frontpage/frontpage.component.scss
+++ b/src/app/frontpage/frontpage.component.scss
@@ -1,183 +1,282 @@
-@media (min-width :992px) {}
-@media(min-width: 768px) and (min-width :992px){}
-@media(min-width: 767px){}
-*{
+* {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family:'poppins', sans-serif;
+    font-family: 'poppins', sans-serif;
     background-color: #1f242d;
-   
+
 }
-body{
+
+body {
     color: #1f242d;
 }
-.profile{
+
+.profile {
     border-radius: 250px;
     width: 300px;
     border: 5px solid #0ef;
     box-shadow: 0 0 30px #0ef;
-   //  background: linear-gradient(45deg, #f06, #3cf);
-   }
-            
-   .home{
-       position: relative;
-       width: 100%;
-       justify-content: space-between;
-       height: 100vh;
-       background-size: cover;
-       background-position: center;
-       display: flex;
-       align-items: center;
-       padding: 70px 13% 0;
-   }
-   .home-content{
-       max-width: 600px;
-       color: #fff;
-   }
-   .home-content h3{
-       font-size: 32px;
-       font-weight: 700;
-   }
-   .home-content h1{
-       font-size: 56px;
-       font-weight: 700;
-       margin: -3px 0;
-   }
-   .home-content p{
-       font-size: 20px;
-   }
-   span{
-       color: #0ef;
-   }
-   .home-scl a{
-        display: inline-flex;
-       justify-content: center;
-       align-items: center;
-       width: 40px;
-       height: 40px;
-       background: transparent;
-       border: 2px solid #0ef;
-       border-radius: 50px;
-       font-size: 20px;
-       color: #0ef;
-       text-decoration: none;
-       margin: 30px 15px 30px 0;
-   }
-   .home-scl a:hover{
-       background: #0ef;
-       box-shadow: 0 0 20px #0ef;
-   }
-   .btn-box{ 
-       display: inline-block;
-       padding: 12px 20px;
-       background: #0ef;
-       border-radius: 40px;
-       font-size: 16px;
-       color: #081b29;
-       letter-spacing: 1px;
-       text-decoration: none;
-       font-weight: 600;
-   }
-   
-   .btn-box:hover{
-       background: #0ef;  
-       box-shadow: 0 0 20px #0ef;
-   }
-   .about{
-       position: relative;
-       width: 100%;
-       justify-content: space-between;
-       height: 100vh;
-       background-size: cover;
-       background-position: center;
-       display: flex;
-       align-items: center;
-       padding: 70px 13% 0;
-   }
-   .about-content{
-       max-width: 600px;
-       color: #fff;
-   }
-   .about-content h3{
-       font-size: 32px;
-       font-weight: 700;
-   }
-   .about-content h2{
-       font-size: 40px;
-       font-weight: 700;
-       margin: -3px 0;
-       color: red;
-   }
-   .about-content p{
-       font-size: 20px;
-   }
-   .aboutimg{
-       width: 350px;
-       margin-left: 20px;
-   }
-   .skill{
-       position: relative;
-       width: 100%;
-       height: 100vh;
-       background-size: cover;
-       background-position: center;
-       align-items: center;
-       padding: 70px 13% 0;
-   }
-   .skill-content{
-       max-width: 600px;
-       color: #fff;
-       display: inline-flex;
-       text-align: center;
-       
-   }
-   .skill h3{
-       font-size: 20px;
-       font-weight: 700;
-   }
-   .skill h2{
-       font-size: 50px;
-       font-weight: 600;
-       color: red;
-   }
-   .skill p {
-       font-size: 20px;
-       color: #fff;
-   }
-   .html{
-       width: 100px;
-       margin: 40px;
-       border-radius: 100px;
-       border:2px solid #0ef;
-       box-shadow: 0 0 20px #0ef;
-   }
-   .css{
-       border-radius: 100px;
-       width: 106px;
-       margin: 40px;
-       border:2px solid #0ef;
-       box-shadow: 0 0 20px #0ef;
-   }
-   .js{
-       border-radius: 200px;
-       width: 100px;
-       margin: 40px;
-       border:2px solid #0ef;
-       box-shadow: 0 0 20px #0ef;
-   }
-   .angular{
-       border-radius: 120px;
-       width: 100px;
-       margin: 40px;
-       border:2px solid #0ef;
-       box-shadow: 0 0 20px #0ef;
-   }
-   .git{
-       border-radius: 120px;
-       width: 100px;
-       margin: 40px;
-       border:2px solid #0ef;
-       box-shadow: 0 0 20px #0ef;
-   }
-   
+    //  background: linear-gradient(45deg, #f06, #3cf);
+}
+
+.home {
+    position: relative;
+    width: 100%;
+    justify-content: space-between;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    padding: 70px 13% 0;
+}
+
+.home-content {
+    max-width: 600px;
+    color: #fff;
+}
+
+.home-content h3 {
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.home-content h1 {
+    font-size: 56px;
+    font-weight: 700;
+    margin: -3px 0;
+}
+
+.home-content p {
+    font-size: 20px;
+}
+
+span {
+    color: #0ef;
+}
+
+.home-scl a {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #0ef;
+    border-radius: 50px;
+    font-size: 20px;
+    color: #0ef;
+    text-decoration: none;
+    margin: 30px 15px 30px 0;
+}
+
+.home-scl a:hover {
+    background: #0ef;
+    box-shadow: 0 0 20px #0ef;
+}
+
+.btn-box {
+    display: inline-block;
+    padding: 12px 20px;
+    background: #0ef;
+    border-radius: 40px;
+    font-size: 16px;
+    color: #081b29;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+.btn-box:hover {
+    background: #0ef;
+    box-shadow: 0 0 20px #0ef;
+}
+
+.about {
+    position: relative;
+    width: 100%;
+    justify-content: space-between;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    padding: 70px 13% 0;
+}
+
+.about-content {
+    max-width: 600px;
+    color: #fff;
+}
+
+.about-content h3 {
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.about-content h2 {
+    font-size: 40px;
+    font-weight: 700;
+    margin: -3px 0;
+    color: red;
+}
+
+.about-content p {
+    font-size: 20px;
+}
+
+.aboutimg {
+    width: 350px;
+    margin-left: 20px;
+}
+
+.skill {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    align-items: center;
+    padding: 70px 13% 0;
+}
+
+.skill-content {
+    max-width: 600px;
+    color: #fff;
+    display: inline-flex;
+    text-align: center;
+
+}
+
+.skill h3 {
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.skill h2 {
+    font-size: 50px;
+    font-weight: 600;
+    color: red;
+}
+
+.skill p {
+    font-size: 20px;
+    color: #fff;
+}
+
+.html {
+    width: 100px;
+    margin: 40px;
+    border-radius: 100px;
+    border: 2px solid #0ef;
+    box-shadow: 0 0 20px #0ef;
+}
+
+.css {
+    border-radius: 100px;
+    width: 106px;
+    margin: 40px;
+    border: 2px solid #0ef;
+    box-shadow: 0 0 20px #0ef;
+}
+
+.js {
+    border-radius: 200px;
+    width: 100px;
+    margin: 40px;
+    border: 2px solid #0ef;
+    box-shadow: 0 0 20px #0ef;
+}
+
+.angular {
+    border-radius: 120px;
+    width: 100px;
+    margin: 40px;
+    border: 2px solid #0ef;
+    box-shadow: 0 0 20px #0ef;
+}
+
+.git {
+    border-radius: 120px;
+    width: 100px;
+    margin: 40px;
+    border: 2px solid #0ef;
+    box-shadow: 0 0 20px #0ef;
+}
+
+////////////////////////////////////////////
+
+@media(min-width: 320px) and (max-width: 767px) {
+
+    .home {
+        display: flex;
+        flex-direction: column;
+        padding: 50px 5% 0;
+        position: static;
+        height: 100%;
+    }
+
+    .home-scl {
+        text-align: center;
+    }
+
+    .profile {
+        width: 170px;
+        margin: 30px;
+    }
+
+    .resume {
+        text-align: center;
+    }
+
+    .about {
+        position: static;
+        flex-direction: column;
+        display: flex;
+        padding: 20px 5% 0;
+        height: 100%;
+
+    }
+
+    .home-content p {
+        font-size: 15px;
+    }
+
+    .home-content h3 {
+        font-size: 17px;
+    }
+
+    .home-content h1 {
+        font-size: 33px;
+    }
+
+    .aboutimg {
+        width: 250px;
+        margin-left: 0px;
+    }
+    .about-content p{
+        font-size: 15px;
+    }
+    .about-content h3{
+        font-size: 25px;
+    }
+    .skill {
+        position: static;
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        padding: 40px 5% 0;
+        align-items: start;
+    }
+
+    .skill-content {
+        display: flex;
+        flex-direction: column
+    }
+    .skill p{
+        font-size: 15px;
+    }
+    .skill h2{
+        font-size: 40px;
+    }
+}
