--- a/src/app/frontpage/frontpage.component.scss
+++ b/src/app/frontpage/frontpage.component.scss
@@ -16,6 +16,7 @@ body {
     width: 300px;
     border: 5px solid #0ef;
     box-shadow: 0 0 30px #0ef;
+    margin: 25px;
     //  background: linear-gradient(45deg, #f06, #3cf);
 }
 
