--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -14,7 +14,9 @@
             <a href="https://www.instagram.com/dream_boy_tn_24/"><i class='bx bxl-instagram'></i></a>
             <a href="mailto:santhoshbca9384@gmail.com"><i class='bx bx-envelope'></i></a>
         </div>
-        <div class="resume"><a href="../../assets/image/santhosh_FRONTEND.pdf" class="btn-box">Download CV</a></div>
+        <div class="resume">
+            <a href="../../assets/image/SANTHOSH_Frontend Developer.pdf" class="btn-box">Download CV</a>
+        </div>
     </div>
 </section>
 
